--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
